# asi_2

./: .dockerignore  .gitignore  Dockerfile  kedro_config.yml  model.joblib  predict.py  pyproject.toml  requirements.txt  streamlit_app.py  train_model.py
.github/workflows/: ci.yml
iris_kedro/: README.md  pyproject.toml  requirements.txt
iris_kedro/conf/base/: catalog.yml  mlflow.yml  parameters.yml
iris_kedro/src/iris_kedro/: __init__.py  __main__.py  pipeline_registry.py  settings.py
iris_kedro/src/iris_kedro/pipelines/iris_training/: nodes.py  pipeline.py
tests/: test_app.py
